display inline-block del menù

--- a/index.html
+++ b/index.html
@@ -10,19 +10,59 @@
 
 <body>
 
-    <header class="try">
+    <header>
+
+        <div class="container">
+
+            <div class="row">
+                <!--Immagine Logo-->
+                <div id="logo">
+                  <img src="img/logo.svg" alt="Logo">
+                </div>
+                <!--Menù-->
+                <nav>
+                    <ul>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="">Perché Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </nav>
+                <!--Pulsante accesso-->
+                <div id="login">
+                   <a href="#">Accedi</a>
+                </div>
+
+
+
+            </div>
+
+        </div>
 
     </header>
 
     <section id="jumbotron" class="try">
 
+        <div class="container">
+
+        </div>
+
     </section>
 
     <main class="try">
 
+        <div class="container">
+
+        </div>
+
     </main>
 
     <footer class="try">
+
+        <div class="container">
+
+        </div>
 
     </footer>
 
